# WM

./: .gitignore  killtests.yaml  killtests_text_events_v2.yaml  pyproject.toml  readforcodex.md
artifacts/: BLOCKER_WM_N2.md  WM-0.1.0-tech-review.sha256  checkpoint_release_manifest_f6d279d3809d252a.csv  checkpoint_release_upload_log_f6d279d3809d252a.csv  final_blocked_tree.tar  m0r_smoke.json  m3_overfit_sanity.json  pre_session_nogit_snapshot.tar  t0_checkpoint_publish.json  t0_fresh_clone_pytest.json
artifacts/t2_decode_nan_failed_run/: metadata.json  metrics.jsonl
configs/: overfit.yaml  s5_longrun.yaml  test_decode.yaml  test_tiny.yaml  text_decode_v2.yaml  text_events_v2.yaml
data/: MANIFEST.json
docs/: BOOTSTRAP.md  BUILD_REPORT_WM_N2R.md  BUILD_REPORT_WM_TEXT_01.md  S5_LONG_RUN_INFRA.md
runs/5928db1b03a07a60/: config.yaml  metadata.json  metrics.jsonl
runs/eb2b204d7a033057/: config.yaml  metrics.jsonl
runs/f6d279d3809d252a/: metadata.json  metrics.jsonl  throughput_final.json  throughput_partial.json
tests/: test_adapters.py  test_core_trainer.py  test_data_grid.py  test_data_modalities.py  test_decode.py  test_eval_battery.py  test_report.py  test_smoke.py  test_throughput.py  test_wg7_core_lint.py
wm/: __init__.py  cli.py  generate.py  runtime.py
wm/adapters/: __init__.py  byte_tokenizer.py  modules.py
wm/core/: __init__.py  transformer.py
wm/data/: __init__.py  build_dataset.py  events.py  grid.py  schema.py  signal.py  text.py
wm/eval/: __init__.py  battery.py  decode.py  report.py  run_battery.py  scheduled.py
wm/train/: config.py  (+7 more)
(+45 files in other folders)
