[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wm001"
version = "0.1.0"
description = "Fresh bootstrap for WM program Night 2R."
readme = "readforcodex.md"
requires-python = ">=3.9,<3.12"
dependencies = [
  "torch==2.2.2",
  "numpy==1.26.4",
  "PyYAML==6.0.1",
  "pytest==8.2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

